--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,21 @@
 [tool.poetry]
-name = "weheat_backend_client"
-version = "2024.06.19rc1"
+name = "weheat"
+version = "2024.07.08rc1"
 description = "Weheat Backend"
 authors = ["Jesper Raemaekers <jesper.raemaekers@wefabricate.com>"]
 license = "NoLicense"
 readme = "README.md"
 repository = "https://github.com/wefabricate/wh-public-backend-client"
 keywords = ["OpenAPI", "OpenAPI-Generator", "Weheat Backend"]
-include = ["weheat_backend_client/py.typed"]
+include = ["weheat/py.typed"]
 
 [tool.poetry.dependencies]
 python = "^3.7"
 
 urllib3 = ">= 1.25.3"
 python-dateutil = ">=2.8.2"
-pydantic = ">=2"
-typing-extensions = ">=4.7.1"
+pydantic = "^1.10.5, <2"
+aenum = ">=3.1.11"
 
 [tool.poetry.dev-dependencies]
 pytest = ">=7.2.1"
