--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "weheat"
-version = "2024.07.08rc1"
+version = "2024.07.08"
 description = "Weheat Backend"
-authors = ["Jesper Raemaekers <jesper.raemaekers@wefabricate.com>"]
+authors = ["Jesper Raemaekers <jesper.raemaekers@wefabricate.com>", "Kjell van Straaten <kjell.van.straaten@wefabricate.com>"]
 license = "NoLicense"
 readme = "README.md"
-repository = "https://github.com/wefabricate/wh-public-backend-client"
+repository = "https://github.com/wefabricate/wh-python"
 keywords = ["OpenAPI", "OpenAPI-Generator", "Weheat Backend"]
 include = ["weheat/py.typed"]
 
