--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   publish:
-    runs-on: [linux]
+    runs-on: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v3
       with:
