--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,38 @@ build-backend = "setuptools.build_meta"
 
 [tool.pylint.'MESSAGES CONTROL']
 extension-pkg-whitelist = "pydantic"
+
+[tool.mypy]
+show_error_codes = true
+follow_imports = "normal"
+local_partial_types = true
+strict_equality = true
+no_implicit_optional = true
+warn_incomplete_stub = true
+warn_redundant_casts = true
+warn_unused_configs = true
+warn_unused_ignores = true
+enable_error_code = "deprecated, ignore-without-code, redundant-self, truthy-iterable"
+disable_error_code = "annotation-unchecked, import-not-found, import-untyped"
+extra_checks = false
+check_untyped_defs = true
+disallow_incomplete_defs = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_decorators = true
+disallow_untyped_defs = true
+warn_return_any = true
+warn_unreachable = true
+exclude = [
+  "weheat/api/*",
+  "weheat/models/*",
+  "weheat/*.py"
+]
+
+[[tool.mypy.overrides]]
+module = [
+  "weheat.api.*",
+  "weheat.models.*",
+  "weheat.*"
+]
+follow_imports = "skip"
